--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.3",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.15.0",
@@ -22,7 +23,9 @@
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.38.2",
