--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "ethers": "^5.8.0",
     "framer-motion": "^12.23.24",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
